--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body{
     background-image: url(./images/desktop/image-header.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 25% 100%;
+    background-position: center center;
+    position: relative;
 }
 
 .header__header{
@@ -63,8 +64,21 @@ body{
     text-transform: uppercase;
 }
 
+.header__link--btn:hover{
+    background-color: rgba(255, 255, 255, 0.5);
+    color: white;
+}
+
+.header__content{
+    display: grid;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .header__topic{
-    margin-top: 2.5%;
+    margin-top: 4.6rem;
     text-align: center;
     font-family: 'Fraunces', serif;
     font-size: 4.8rem;
@@ -74,12 +88,8 @@ body{
     color: white;
 }
 
-.header__content{
-    display: grid;
-}
-
 .header__arrow{
-    margin: 3.5% auto;
+    margin: auto;
 }
 
 /* TODO HEADER SECTION */
