--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ body{
     letter-spacing: 1rem;
     font-weight: 900;
     color: white;
+    position: absolute;
+    top: 20%;
+    right: 50%;
+    transform: translate(50%, -0%);
 }
 
 .header__arrow{
